tests/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-one-is-struct.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-one-is-struct.rs:7:5
   |
LL | fn foo(mut x: Ref, y: &u32) {
   |        -----          - let's call the lifetime of this reference `'1`
   |        |
   |        has type `Ref<'_, '2>`
LL |     x.b = y;
   |     ^^^^^^^ assignment requires that `'1` must outlive `'2`
   |
help: consider introducing a named lifetime parameter
   |
LL | fn foo<'a>(mut x: Ref<'a, 'a>, y: &'a u32) {
   |       ++++           ++++++++      ++

error: aborting due to 1 previous error

